[package]
name = "htmx-headers"
version = "0.1.0"
edition = "2021"

[features]
default = ["axum"]
auto-vary = [
    "axum",
    "dep:futures-core",
    "dep:tokio",
    "dep:tower-layer",
    "dep:tower-service",
]
axum = ["dep:axum-core", "dep:axum-extra"]

[dependencies]
axum-core = { version = "0.5", optional = true }
axum-extra = { version = "0.10", optional = true, features = ["typed-header"] }
bytes = "1"
futures-core = { version = "0.3.31", optional = true }
headers-core = "0.3"
http = "1"
http-serde = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.42.0", optional = true, features = ["sync"] }
tower-layer = { version = "0.3.3", optional = true }
tower-service = { version = "0.3.3", optional = true }

[package.metadata.docs.rs]
all-features = true
