[package]
name = "htmxtools"
version = "0.2.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A lightweight Rust crate for working with HTMX headers, specifically designed to integrate seamlessly with axum."
homepage = "https://github.com/devashishdxt/htmxtools"
repository = "https://github.com/devashishdxt/htmxtools"
categories = [
    "asynchronous",
    "encoding",
    "network-programming",
    "web-programming",
]
keywords = ["htmx", "headers", "axum", "http", "web"]
readme = "README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]
edition = "2024"

[features]
default = ["axum", "auto-vary"]
auto-vary = [
    "dep:http-body",
    "dep:pin-project-lite",
    "dep:tower-layer",
    "dep:tower-service",
]
axum = ["dep:axum-core", "dep:axum-extra"]

[dependencies]
axum-core = { version = "0.5", optional = true }
axum-extra = { version = "0.10", optional = true, features = ["typed-header"] }
bytes = "1"
headers-core = "0.3"
http = "1"
http-body = { version = "1.0.1", optional = true }
http-serde = "2"
pin-project-lite = { version = "0.2.16", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-layer = { version = "0.3", optional = true }
tower-service = { version = "0.3", optional = true }

[package.metadata.docs.rs]
all-features = true
